<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:background="@color/teal_100"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:text="@string/greeting_heading"
        android:contentDescription="@string/description_test"
        android:textSize="@dimen/max_size"
        android:textStyle="bold"
        android:background="@color/deep_orange_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <TextView
        android:id="@+id/greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/test_features"
        android:textSize="@dimen/middle_size"
        android:minLines="7"
        android:padding="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        />
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/start_button"
        android:textSize="@dimen/middle_size"
        />



</androidx.constraintlayout.widget.ConstraintLayout>