<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:padding="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        tools:text="Here is the task. Please read carefully." />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintTop_toBottomOf="@id/task">

        <RadioButton
            android:id="@+id/option_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/option_1"
            tools:text="Option-1" />

        <RadioButton
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/option_2"
            tools:text="Option-2" />

        <RadioButton
            android:id="@+id/option_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/option_3"
            tools:text="Option-3" />

        <RadioButton
            android:id="@+id/option_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/option_4"
            tools:text="Option-4" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>